Why Is Waterproofing Important? section some update

--- a/src/index.html
+++ b/src/index.html
@@ -599,7 +599,8 @@
                 <!-- Right Side: Video Thumbnail -->
                 <div class="w-full lg:w-1/2 mt-8 lg:mt-0">
                     <div class="relative video-thumbnail flex items-center justify-center">
-                         <div class="play-button">
+                        <img src="./assets/Disceribe.jpg" alt="">
+                         <div class="play-button absolute">
                          
                          </div>
                     </div>
