--- a/src/index.html
+++ b/src/index.html
@@ -227,8 +227,8 @@
       <!-- Hero Content -->
       <main class="grid grid-cols-1 lg:grid-cols-2 gap-8 items-center pt-12 md:pt-16 lg:pt-24 pb-20">
         <!-- Left Side: Text and Form -->
-        <div class="text-white space-y-8">
-          <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold leading-tight">
+        <div class="text-black space-y-8">
+          <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold leading-tight">
             DR. FIXIT LTD. offers a comprehensive range of products to meet all
             your waterproofing needs
           </h1>
